# almond-mcp

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  rhino_bridge.py
DiagramAssetfiles/: manifest.json
DrawingAssetfiles/: manifest.json
DrawingRecipes/: technical_axon.json
IkeaFurniturefiles/: SPATIAL_GENERATION_PLAN.md  manifest.json
Materialfiles/: manifest.json
RhinoAlmondBridge/: BUILD.md  BridgeServer.cs  Commands.cs  DrawingStyleManager.cs  FurnitureAssetManager.cs  GhDefinitionRunner.cs  GlbExporter.cs  KarambaAdapter.cs  ModelConditioner.cs  RhinoAlmondBridge.csproj  RhinoAlmondBridgePlugin.cs  ScriptExecutor.cs  StructuralValidator.cs
RhinoAlmondBridge/Properties/: AssemblyInfo.cs
RhinoAlmondBridge/yak/: manifest.yml
almond_mcp/: __init__.py  __main__.py  cli.py  exchange.py  ghx_parser.py  paths.py  retrieval_store.py  server.py
capsules/: AUTHORING.md  capsule.schema.json  karamba_beam_v1.capsule.json  karamba_canopy_v1.capsule.json  karamba_frame_v1.capsule.json  karamba_gridshell_v1.capsule.json  karamba_highrise_v1.capsule.json  karamba_membrane_v1.capsule.json  karamba_shell_v1.capsule.json  karamba_truss_v1.capsule.json
docs/: RELEASING.md  RHINO_TEST_CHECKLIST.md  cross-app-blender.md  food4rhino-listing.md  licensing-audit.md  structural-validation.md
examples/: blender_asset_export.py
tests/: conftest.py  test_capsules.py  test_exchange.py  test_furniture_library.py  test_materials.py  test_retrieval_store.py
tools/: build_yak.ps1
